--- a/pcf-font-embed.cabal
+++ b/pcf-font-embed.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Graphics.Text.PCF.Embed
   build-depends:       base >= 4.7 && < 5
                      , vector
+                     , bytestring
                      , template-haskell
                      , pcf-font
   default-language:    Haskell2010
